<resources>
    <string name="app_name">TourismApp</string>
    <string name="Map">Map</string>
    <string name="VisitsList">Visits</string>
    <string name="Sights">Sights</string>
    <string name="Add">+</string>
    <string name="AddNewPlace">Add new place</string>
    <string name="InputFieldText">New Place</string>
    <string name="Cancel">Cancel</string>
    <string name="Submit">Submit</string>
    <string name="locate">Use this device location</string>
    <string name="PlaceName">Place name</string>

    <string name="Kremlin">Kremlin</string>
    <string name="BT">Bolshoi Theatre</string>
    <string name="GAS">GAS</string>
    <string name="Lenin">Biblioteka Imeni Lenina</string>

    <string name="LocationMSC">Location: Moscow</string>
    <string name="Home">Home</string>

    <string name="CardsTitle">Near You</string>
    <string name="VisitsTitle">Visits Roadmap</string>

    <string name="ChangeLocation">Change Location</string>
    <string name="new_location">New Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="noti_channel_list">Visits List</string>
    <string name="noti_channel_list_desc">Info about visits</string>
    <string name="some_text_here">Some text here...</string>
    <string name="go_to_app">Go to app</string>
    <string name="location">Location:</string>
    <string name="information">Information:</string>
    <string name="track_distance">Track distance</string>
    <string name="add_to_visits">Add to visits</string>


    <string name="preference_file_key">com.example.tourismapp.PREFRENCES_FILE_KEY</string>

</resources>