<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context=".AddVisit">

    <EditText
        android:id="@+id/editLocation"
        android:layout_width="325dp"
        android:layout_height="54dp"
        android:layout_marginTop="236dp"
        android:autofillHints=""
        android:background="@drawable/curved_edit_text"
        android:ems="10"
        android:hint="@string/InputFieldText"
        android:inputType=""
        android:padding="@dimen/stand_padding"
        android:textSize="@dimen/stand_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/changeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/nul"
        android:text="@string/AddNewPlace"
        android:textAllCaps="false"
        app:layout_constraintBottom_toTopOf="@+id/cancel_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:theme="@style/Button.Transparent"
        android:stateListAnimator="@null"
        android:layout_marginBottom="@dimen/stand_layout_margin"
        android:text="@string/Cancel"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>