<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/nearYouTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/stand_layout_margin_extended"
            android:layout_marginTop="@dimen/stand_layout_margin_extended"
            android:text="@string/CardsTitle"
            android:textColor="@color/black"
            android:textSize="@dimen/increased_text_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/locationName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nearYouTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/stand_layout_margin_extended"
            android:layout_marginTop="@dimen/stand_layout_margin_shorter"
            android:text="@string/LocationMSC"
            android:textSize="@dimen/min_text_size" />

        <RelativeLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locationName"
            android:layout_width="369dp"
            android:layout_height="373dp"
            android:layout_marginStart="@dimen/stand_layout_margin"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="@dimen/stand_layout_margin"
            android:background="@drawable/near_card_container">

            <LinearLayout
                android:id="@+id/first_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="@dimen/stand_layout_margin_super_extended"
                android:layout_marginTop="@dimen/stand_layout_margin_extended"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:id="@+id/first_card"
                    app:cardCornerRadius="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:id="@+id/Gas_image"
                        app:srcCompat="@drawable/gas_image"
                        android:layout_width="@dimen/stand_image_size"
                        android:layout_height="@dimen/stand_image_size"
                        android:contentDescription="@string/GAS"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/stand_layout_margin"
                    android:text="@string/GAS"
                    android:textSize="@dimen/min_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/second_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/stand_layout_margin_extended"
                android:layout_marginEnd="@dimen/stand_layout_margin_super_extended"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <androidx.cardview.widget.CardView
                    android:id="@+id/second_card"
                    app:cardCornerRadius="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <ImageView
                        android:id="@+id/theatre_image"
                        app:srcCompat="@drawable/bolshoi_theatre"
                        android:layout_width="@dimen/stand_image_size"
                        android:layout_height="@dimen/stand_image_size"
                        android:contentDescription="@string/BT"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/theatre_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/stand_layout_margin"
                    android:text="@string/BT"
                    android:textSize="@dimen/min_text_size" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/third_linear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first_linear"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/stand_layout_margin_super_extended"
                android:layout_marginTop="@dimen/stand_layout_margin_extended"
                android:gravity="center"
                android:orientation="vertical"
                tools:ignore="RelativeOverlap">

                <androidx.cardview.widget.CardView
                    android:id="@+id/third_card"
                    app:cardCornerRadius="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/lenin_image"
                        app:srcCompat="@drawable/lenin"
                        android:layout_width="@dimen/stand_image_size"
                        android:layout_height="@dimen/stand_image_size"
                        android:contentDescription="@string/Lenin"
                        android:scaleType="centerCrop" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/lenin_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/stand_layout_margin"
                    android:text="@string/Lenin"
                    android:textSize="@dimen/min_text_size" />

            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/changeLocButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/stand_layout_margin_extended"
            android:layout_marginBottom="@dimen/stand_layout_margin"
            android:text="@string/ChangeLocation"
            android:textAllCaps="false"
            android:textSize="@dimen/stand_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/add_button"
            android:layout_width="@dimen/round_button_size"
            android:layout_height="@dimen/round_button_size"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="@dimen/stand_layout_margin"
            android:background="@drawable/round_button"
            android:text="@string/Add"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>